[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "state_machines_tutorial"
version = "0.1.0"
description = "Tutorial: State Machines - Managing complex multi-stage workflows with state transitions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk @ file:///Users/daniel.miller/codebases/agentex-python",
    "scale-gp",
    "temporalio>=1.18.2,<2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "debugpy>=1.8.15",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88 