[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ab020-streaming"
version = "0.1.0"
description = "A multiturn AgentEx agent that streams outputs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88 