[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ab110-pydantic-ai"
version = "0.1.0"
description = "An async Pydantic AI agent with tool calling and Redis streaming"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
    "pydantic-ai-slim[openai]>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "isort",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
