[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ab130-claude-code"
version = "0.1.0"
description = "An async Claude Code agent streaming the unified harness surface via a local CLI subprocess"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]
