[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "at090_claude_agents_sdk_mvp"
version = "0.1.0"
description = "Claude Agents SDK integration with AgentEx Temporal workflows - MVP proof of concept"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk>=0.6.0",
    "claude-agent-sdk>=0.1.0",
    "temporalio>=1.18.2",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "debugpy>=1.8.15",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88