[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "at100_gemini_litellm"
version = "0.1.0"
description = "An AgentEx agent using Gemini via LiteLLM"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk>=0.6.0",
    "openai-agents>=0.4.2",
    "temporalio>=1.18.2",
    "scale-gp",
    "litellm>=1.52.0",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.15",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
