[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "at100_sgp_help"
version = "0.1.0"
description = "SGP Help Agent - answers questions about Scale Generative Platform codebase"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk>=0.6.0",
    "claude-agent-sdk>=0.1.0",
    "temporalio>=1.18.2",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "debugpy>=1.8.15",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
